--- a/reseni_hard/index.html
+++ b/reseni_hard/index.html
@@ -19,104 +19,108 @@
         <p class="jana">Jana Zcela Vymyšlená</p>
     </header>
 
-    <div class="pc_version">
-        <main>
-            <div class="pc_main">
-                <nav>
-                    <ul>
-                        <li><a class="navigation" href="#section1">Úvod</a></li>
-                        <li><a class="navigation" href="#section2">Proč jet na Island</a></li>
-                        <li><a class="navigation" href="#section3">Co musíte vidět</a></li>
-                        <li><a class="navigation" href="#section4">Fotogalerie</a></li>
-                    </ul>
-                </nav>
+    <main>
+        <div class="pc_main">
+            <nav>
+                <ul>
+                    <li><a class="navigation" href="#section1">Úvod</a></li>
+                    <li><a class="navigation" href="#section2">Proč jet na Island</a></li>
+                    <li><a class="navigation" href="#section3">Co musíte vidět</a></li>
+                    <li><a class="navigation" href="#section4">Fotogalerie</a></li>
+                </ul>
+            </nav>
 
-                <section id="section1" class="sectionone">
-                    <div class="part1">
-                        <p>
-                            Island je jeden z nejpozoruhodnějších kousků pevniny, který v Evropě můžete navštívit. Neuchvátí jenom fotografy - krajináře, ale snad každého, kdo miluje divokou přírodu. Ne nadarmo se také říká, že si jej při první návštěvě zamilujete a budete se muset stále vracet. Byl to i můj případ!
-                        </p>
+            <section id="section1" class="sectionone">
+                <div class="part1">
+                    <p>
+                        Island je jeden z nejpozoruhodnějších kousků pevniny, který v Evropě můžete navštívit. Neuchvátí jenom fotografy - krajináře, ale snad každého, kdo miluje divokou přírodu. Ne nadarmo se také říká, že si jej při první návštěvě zamilujete a budete se muset stále vracet. Byl to i můj případ!
+                    </p>
 
-                        <p>
-                            Rád bych popsal některá místa, která prostě při návštěvě nemůžete vynechat. Není ani důvod, jejich dostupnost je výborná díky hlavní okružní cestě, po které pohodlně celý ostrov za několik dní objedete bez toho, abyste museli zajíždět do hůře dostupného vnitrozemí. I tam je samozřejmě spousta dech beroucích míst, ale za pár dní se stihnout bohužel vše nedá.
-                        </p>
+                    <p>
+                        Rád bych popsal některá místa, která prostě při návštěvě nemůžete vynechat. Není ani důvod, jejich dostupnost je výborná díky hlavní okružní cestě, po které pohodlně celý ostrov za několik dní objedete bez toho, abyste museli zajíždět do hůře dostupného vnitrozemí. I tam je samozřejmě spousta dech beroucích míst, ale za pár dní se stihnout bohužel vše nedá.
+                    </p>
 
-                        <p>
-                            Když máte to štěstí a zrovna nesoptí některá z místních sopek, nabízí tento vulkanicky nejaktivnější ostrov Evropy úžasné pohledy, které prostě jinde nemáte šanci spatřit. Pro Středoevropana, suchozemce je to úplně jiný svět.
-                        </p>
-                    </div>
+                    <p>
+                        Když máte to štěstí a zrovna nesoptí některá z místních sopek, nabízí tento vulkanicky nejaktivnější ostrov Evropy úžasné pohledy, které prostě jinde nemáte šanci spatřit. Pro Středoevropana, suchozemce je to úplně jiný svět.
+                    </p>
+                </div>
+            </section>
+        </div>
+
+        <figure><img class="fotky" src="images/island1.jpg" alt="Foto Island 1">
+            <figcaption>
+                <p class="credit">Photo © <a href="https://flic.kr/p/yFnyAT">Moyan Brenn</a></p>
+            </figcaption>
+        </figure>
+
+
+        <section id="section2" class="sectiontwo">
+            <h2>Proč jet na Island</h2>
+            <div class="object2"></div>
+            <div class="part2">
+                <p>
+                    Island je domovem největšího evropského ledovce, vodopádu s nejmohutnějším průtokem a tisíců místních koní a divokých hus, které majestátně ve dvojicích křižují nebe a dokreslují tak neopakovatelnou atmosféru tohoto pozoruhodného kousku pevniny kdesi v Atlantiku. K tomu mohutné skalní útvary, čnící z moře jako tiší strážci místních černých lávových pláží, stovky metrů vysoké útesy, které jsou domovem racků a papuchalků a především obrovské vodopády všeho druhu. Panují tu trochu jiná měřítka, a to téměř ve všem.
+                </p>
+
+                <p>
+                    Pociťujete tu zvláštní volnost. Mimo tří větších měst, kde je soustředěna drtivá většina obyvatel, můžete projíždět krajinou stovky kilometrů a čas od času potkáte jen osamělou usedlost, obklopenou stády koní a ovcí. Na jižním pobřeží když už narazíte na vesnici, jedná se o seskupení usedlostí, jejichž počet byste kolikrát spočítali na prstech jedné ruky a samozřejmě nesmí chybět benzínová pumpa. Právě čerpací stanice jsou zde centrem dění.
+                </p>
+                <p>
+                    Severní pobřeží je pak místy opravdová divočina, už tak mizivé osídlení ještě více prořídne a vy projíždíte místní fjordy po šotolinových cestách, aniž byste hodiny potkali jediné auto. Nad hlavou vám ční vysoké hory pokryté věčným sněhem, každým údolím se v kaskádách a vodopádech řítí dolů řeky, prostě divočina zamrznutá v čase. Dostane se vám to tu pod kůži a nutí Vás to přemýšlet, jak je ve skutečnosti člověk maličký a nicotný&hellip;
+                </p>
             </div>
+        </section>
 
-            <figure><img src="images/island1.jpg" alt="Foto Island 1">
-                <figcaption>
-                    <p class="credit">Photo © <a href="https://flic.kr/p/yFnyAT">Moyan Brenn</a></p>
-                </figcaption>
-            </figure>
-            </section>
-
-            <section id="section2" class="sectiontwo">
-                <h2>Proč jet na Island</h2>
-                <div class="object2"></div>
-                <div class="part2">
-                    <p>
-                        Island je domovem největšího evropského ledovce, vodopádu s nejmohutnějším průtokem a tisíců místních koní a divokých hus, které majestátně ve dvojicích křižují nebe a dokreslují tak neopakovatelnou atmosféru tohoto pozoruhodného kousku pevniny kdesi v Atlantiku. K tomu mohutné skalní útvary, čnící z moře jako tiší strážci místních černých lávových pláží, stovky metrů vysoké útesy, které jsou domovem racků a papuchalků a především obrovské vodopády všeho druhu. Panují tu trochu jiná měřítka, a to téměř ve všem.
-                    </p>
-
-                    <p>
-                        Pociťujete tu zvláštní volnost. Mimo tří větších měst, kde je soustředěna drtivá většina obyvatel, můžete projíždět krajinou stovky kilometrů a čas od času potkáte jen osamělou usedlost, obklopenou stády koní a ovcí. Na jižním pobřeží když už narazíte na vesnici, jedná se o seskupení usedlostí, jejichž počet byste kolikrát spočítali na prstech jedné ruky a samozřejmě nesmí chybět benzínová pumpa. Právě čerpací stanice jsou zde centrem dění.
-                    </p>
-                    <p>
-                        Severní pobřeží je pak místy opravdová divočina, už tak mizivé osídlení ještě více prořídne a vy projíždíte místní fjordy po šotolinových cestách, aniž byste hodiny potkali jediné auto. Nad hlavou vám ční vysoké hory pokryté věčným sněhem, každým údolím se v kaskádách a vodopádech řítí dolů řeky, prostě divočina zamrznutá v čase. Dostane se vám to tu pod kůži a nutí Vás to přemýšlet, jak je ve skutečnosti člověk maličký a nicotný&hellip;
-                    </p>
-                </div>
-                <figure><img src="images/island2.jpg" alt="Foto Island 2">
-                    <figcaption>
-                        <p class="credit">Photo © <a href="https://flic.kr/p/yiAg2h">Moyan Brenn</a></p>
-                    </figcaption>
-                </figure>
-            </section>
-
-            <section id="section3" class="sectionthree">
-                <h2>Co musíte vidět</h2>
-                <div class="object2"></div>
-                <div class="part3">
-                    <p>
-                        <strong>Poloostrov Reykjanes</strong> - Než z letiště v Keflavíku zamíříte do hlavního města, zajeďte se podívat na tento poloostrov. Je to zajížďka jen pár kilometrů a rázem se dostanete do krajiny pro Island přímo typické. Cestu lemují lávová pole připomínající doslova měsíční krajinu. Pro Středoevropana něco neuvěřitelného. Ani kousek zeleně, kam oko dohlédne jen černá suť a rozpraskané lávové desky. Mezi tím vším až mysteriózně vypadající geotermální elektrárny. Na pobřeží pak vystupují z vody poutavé skalní útvary Reykjanesta.
-                    </p>
-
-                    <p>
-                        <strong>Reykjavík</strong> - Hlavní město určitě nevynecháte kvůli doplnění proviantu. Za zmínku stojí zajímavě architektonicky řešený kostel Hallgrímskirkja, centrum města a přístav se svou výstavbou začínají podobat všem vyspělým velkoměstům v Evropě a příliš milovníky severu neosloví. Zavítáte-li však do spleti uliček pod katedrálou, nebudete litovat, ty už atmosféru mají.
-                    </p>
-
-                    <p>
-                        <strong>Gullfoss</strong> - Vodopádové menu začínáme u kaskádovitého vodopádu na řece Hvítá. Postavit se na hranu mezi kaskádami a hledět do té masy vody, řítící se do kaňonu pod vámi je vážně zážitek&hellip;
-                    </p>
-
-                    <p>
-                        <strong>Geysir</strong> - Kousek od Gullfossu je oblast, která turisty přitahuje jako magnet. Geysir, který dal název všem ostatním gejzírům světa. On sám se však již téměř odmlčel, údajně chrlí vodu jen velmi zřídka. Zato jeho menší a mladší soused, pojmenovaný Strokkur, prská do okolí vařící sloupec vody v méně či více pravidelných intervalech každých pár minut.
-                    </p>
-
-                    <p>
-                        <strong>Seljalandsfoss</strong> - To už jsme na jižním pobřeží. Tento 60 metrů vysoký vodopád je výjimečný především tím, že se na něho můžete podívat nejen shora, ze stran, ale také jej obejít a hledět do okolní krajiny přes masy vody, které kolem Vás padají.
-                    </p>
-                </div>
-                <figure><img src="images/island3.jpg" alt="Foto Island 3">
-                    <figcaption>
-                        <p class="credit">Photo © <a href="https://flic.kr/p/LfcKHP">Yiannis Chatzitheodorou</a></p>
-                    </figcaption>
-                </figure>
+        <figure><img class="fotky" src="images/island2.jpg" alt="Foto Island 2">
+            <figcaption>
+                <p class="credit">Photo © <a href="https://flic.kr/p/yiAg2h">Moyan Brenn</a></p>
+            </figcaption>
+        </figure>
 
 
-                <div class="part4">
-                    <p>
-                        <strong>Skógafoss</strong> - Ať si koupíte jakoukoliv mapu nebo průvodce Islandu, jsem si téměř jist, že na titulce bude právě Skógafoss. Nutno říct, že právem. Výška 60 metrů, šířka 25 metrů, zážitek neuvěřitelný. Jakmile trochu zasvítí slunce, okamžitě se ve vodní tříšti v okolí vytváří krásná duha. Samozřejmě opět přitahuje spoustu turistů, takže doporučuji navštívit tuto hříčku přírody někdy pozdě večer či brzy ráno, kdy tu budete téměř sami, opravdu se to vyplatí.
-                    </p>
-                    <p>
-                        <strong>Dyrhólaey</strong> - Jde o nejjižnější cíp celého strova s vysokými útesy, na kterých ční jako tichý strážce velmi fotogenický maják. Zdejší útesy jsou také domovem Papuchalků (Fratercula arctica). Tito ptáci jsou opravdoví klauni a jejich nemotorný pohyb prostě musí vykouzlit úsměv na tváři každému. Mohutný lávový útes, ve kterém voda vyhloubila dvě skalní brány nebývalých rozměrů, prostě nesmíte vynechat.
-                    </p>
-                </div>
-            </section>
-        </main>
+        <section id="section3" class="sectionthree">
+            <h2>Co musíte vidět</h2>
+            <div class="object2"></div>
+            <div class="part3">
+                <p>
+                    <strong>Poloostrov Reykjanes</strong> - Než z letiště v Keflavíku zamíříte do hlavního města, zajeďte se podívat na tento poloostrov. Je to zajížďka jen pár kilometrů a rázem se dostanete do krajiny pro Island přímo typické. Cestu lemují lávová pole připomínající doslova měsíční krajinu. Pro Středoevropana něco neuvěřitelného. Ani kousek zeleně, kam oko dohlédne jen černá suť a rozpraskané lávové desky. Mezi tím vším až mysteriózně vypadající geotermální elektrárny. Na pobřeží pak vystupují z vody poutavé skalní útvary Reykjanesta.
+                </p>
+
+                <p>
+                    <strong>Reykjavík</strong> - Hlavní město určitě nevynecháte kvůli doplnění proviantu. Za zmínku stojí zajímavě architektonicky řešený kostel Hallgrímskirkja, centrum města a přístav se svou výstavbou začínají podobat všem vyspělým velkoměstům v Evropě a příliš milovníky severu neosloví. Zavítáte-li však do spleti uliček pod katedrálou, nebudete litovat, ty už atmosféru mají.
+                </p>
+
+                <p>
+                    <strong>Gullfoss</strong> - Vodopádové menu začínáme u kaskádovitého vodopádu na řece Hvítá. Postavit se na hranu mezi kaskádami a hledět do té masy vody, řítící se do kaňonu pod vámi je vážně zážitek&hellip;
+                </p>
+
+                <p>
+                    <strong>Geysir</strong> - Kousek od Gullfossu je oblast, která turisty přitahuje jako magnet. Geysir, který dal název všem ostatním gejzírům světa. On sám se však již téměř odmlčel, údajně chrlí vodu jen velmi zřídka. Zato jeho menší a mladší soused, pojmenovaný Strokkur, prská do okolí vařící sloupec vody v méně či více pravidelných intervalech každých pár minut.
+                </p>
+
+                <p>
+                    <strong>Seljalandsfoss</strong> - To už jsme na jižním pobřeží. Tento 60 metrů vysoký vodopád je výjimečný především tím, že se na něho můžete podívat nejen shora, ze stran, ale také jej obejít a hledět do okolní krajiny přes masy vody, které kolem Vás padají.
+                </p>
+            </div>
+        </section>
+
+        <figure><img class="fotky" src="images/island3.jpg" alt="Foto Island 3">
+            <figcaption>
+                <p class="credit">Photo © <a href="https://flic.kr/p/LfcKHP">Yiannis Chatzitheodorou</a></p>
+            </figcaption>
+        </figure>
+
+        <section class="sectionthree">
+            <div class="part4">
+                <p>
+                    <strong>Skógafoss</strong> - Ať si koupíte jakoukoliv mapu nebo průvodce Islandu, jsem si téměř jist, že na titulce bude právě Skógafoss. Nutno říct, že právem. Výška 60 metrů, šířka 25 metrů, zážitek neuvěřitelný. Jakmile trochu zasvítí slunce, okamžitě se ve vodní tříšti v okolí vytváří krásná duha. Samozřejmě opět přitahuje spoustu turistů, takže doporučuji navštívit tuto hříčku přírody někdy pozdě večer či brzy ráno, kdy tu budete téměř sami, opravdu se to vyplatí.
+                </p>
+                <p>
+                    <strong>Dyrhólaey</strong> - Jde o nejjižnější cíp celého strova s vysokými útesy, na kterých ční jako tichý strážce velmi fotogenický maják. Zdejší útesy jsou také domovem Papuchalků (Fratercula arctica). Tito ptáci jsou opravdoví klauni a jejich nemotorný pohyb prostě musí vykouzlit úsměv na tváři každému. Mohutný lávový útes, ve kterém voda vyhloubila dvě skalní brány nebývalých rozměrů, prostě nesmíte vynechat.
+                </p>
+            </div>
+        </section>
+
 
         <div class="gallery">
 
@@ -181,7 +185,7 @@
                 </figure>
             </div>
         </div>
-    </div>
+    </main>
 
 
     <footer>
